# linx

./: .gitignore  CMakeLists.txt  README.md  setup.py
include/linx/: linx.hpp
lingraphics/: .gitignore  README.md  app.py  pyproject.toml
lingraphics/examples/: compare_numpy_linx_schur.py  render_2s_gif_and_schur_csv.py  render_demo.py  render_inverse_task_video_csv.py  time_tralalero_cube_video_csv.py
lingraphics/lingraphics/: __init__.py  backends.py  benchmark.py  camera.py  cli.py  gui_app.py  io.py  mesh.py  renderer.py  scene.py  transforms.py  video.py
lingraphics/tests/: test_renderer.py
linx/: CMakeLists.txt  README.md  setup.py
linx/examples/: demo.cpp
linx/include/linx/: linx.hpp
linx/python/linx/: __init__.py  _linx_module.cpp
linx/tests/: benchmark_least_squares_linx_vs_numpy.py  benchmark_least_squares_n4096.py  benchmark_linx_vs_numpy.py  conftest.py  run_least_squares_n4096.sh  test_linx.cpp  test_python_linx.py
linx_nn/: README.md  pyproject.toml
linx_nn/benchmarks/: benchmark_linx_nn_vs_pytorch.py
linx_nn/examples/: train_linx_nn_xor.py
linx_nn/linx_nn/: __init__.py  functional.py  modules.py  optim.py  tensor.py
linx_nn/linx_nn.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
linx_nn/tests/: test_linx_nn.py
python/linx/: __init__.py  _linx_module.cpp
python/linx_la.egg-info/: PKG-INFO  SOURCES.txt
tests/: benchmark_linx_vs_numpy.py  test_linx.cpp  test_python_linx.py
