[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lingraphics"
version = "0.1.0"
description = "Small NumPy/linx-toggleable software graphics renderer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy"]

[project.optional-dependencies]
png = ["pillow"]
dev = ["pytest"]

[project.scripts]
lingraphics-demo = "lingraphics.cli:main"
lingraphics-gui = "lingraphics.gui_app:main"
lingraphics-benchmark = "lingraphics.benchmark:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["lingraphics*"]
